<resources>
    <string name="app_name">secrets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
a
    <string name="menu_secrets">列表</string>
    <string name="menu_authenticator">身份验证器</string>
    <string name="menu_secret">添加</string>
    <string name="menu_no_secret">查看</string>
    <string name="menu_settings">设置</string>
    <string name="menu_delete">删除</string>
    <string name="menu_save">保存</string>

    <string name="btn_confirm">确定</string>

    <!-- secret -->
    <string name="secret_domain">Domain</string>
    <string name="secret_account">用户名</string>
    <string name="secret_password">密码</string>
    <string name="secret_url">url</string>
    <string name="secret_remark">备注</string>

    <string name="auth">主密码</string>
    <string name="auth_first">请设置主密码</string>
    <string name="auth_unlock">解锁</string>
    <string name="auth_main_first">请输入主密码</string>
    <string name="auth_main_second">请再次输入主密码</string>
    <string name="auth_salt">请输入盐</string>
    <string name="auth_re_salt">请再次输入盐</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- secret -->
    <string name="prompt_email">prompt_email</string>
    <string name="prompt_password">prompt_password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>