<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_secrets">

    <fragment
        android:id="@+id/nav_secrets"
        android:name="com.lingdeqin.secrets.ui.secrets.SecretsFragment"
        android:label="@string/menu_secrets"
        tools:layout="@layout/fragment_secrets" />
    <fragment
        android:id="@+id/nav_authenticator"
        android:name="com.lingdeqin.secrets.ui.authenticator.AuthenticatorFragment"
        android:label="@string/menu_authenticator"
        tools:layout="@layout/fragment_authenticator" />
    <fragment
        android:id="@+id/nav_secret"
        android:name="com.lingdeqin.secrets.ui.secret.SecretFragment"
        android:label="@string/menu_secret"
        />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.lingdeqin.secrets.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        />
    <fragment
        android:id="@+id/nav_no_secret"
        android:name="com.lingdeqin.secrets.ui.nosecret.NoSecretFragment"
        android:label="@string/menu_no_secret"
        />
    <fragment
        android:id="@+id/nav_backup_setting"
        android:name="com.lingdeqin.secrets.ui.settings.BackupFragment"
        android:label="@string/security_backup"
        />

</navigation>