<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_secrets">

    <fragment
        android:id="@+id/nav_secrets"
        android:name="com.lingdeqin.secrets.ui.secrets.SecretsFragment"
        android:label="@string/menu_secrets"
        tools:layout="@layout/fragment_secrets" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.lingdeqin.secrets.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/nav_secret"
        android:name="com.lingdeqin.secrets.ui.secret.SecretFragment"
        android:label="@string/menu_secret"
        tools:layout="@layout/fragment_secret" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.lingdeqin.secrets.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        />


</navigation>