<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/auth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_first"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_main_password"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_main_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/auth_main_first"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_main_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/auth_main_second"
            app:layout_constraintTop_toBottomOf="@id/edit_main_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_salt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/auth_salt"
            app:layout_constraintTop_toBottomOf="@id/edit_main_re_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_re_salt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/auth_re_salt"
            app:layout_constraintTop_toBottomOf="@id/edit_salt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            app:layout_constraintTop_toBottomOf="@id/edit_re_salt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>