<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.nosecret.NoSecretFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- domain -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_no_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_domain"
            android:textSize="@dimen/edit_text_size"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/secret_domain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/label_no_domain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>
        <!-- 用户名 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_account"
            android:textSize="@dimen/edit_text_size"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/secret_domain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/secret_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/label_no_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>
        <!-- 密码 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_no_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_password"
            android:textSize="@dimen/edit_text_size"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/secret_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_no_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/secret_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/is_visible_password"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/is_visible_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:button="@drawable/selector_password"
                android:checked="false"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/secret_password"
                app:layout_constraintEnd_toStartOf="@+id/btn_copy"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_copy"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_copy"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/is_visible_password"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- url -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_no_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_url"
            android:textSize="@dimen/edit_text_size"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/password_constraint_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/secret_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/label_no_url"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>
        <!-- 备注 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label_no_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secret_remark"
            android:textSize="@dimen/edit_text_size"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/secret_url"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/secret_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/label_no_remark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        </androidx.appcompat.widget.AppCompatEditText>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>